// silence the protobuf compiler warning by setting the default
syntax = "proto2";
option go_package = "lxd/migration";

package migration;

enum MigrationFSType {
	RSYNC		= 0;
	BTRFS		= 1;
	ZFS		= 2;
	RBD		= 3;
	BLOCK_AND_RSYNC	= 4;
}

enum CRIUType {
	CRIU_RSYNC	= 0;
	PHAUL		= 1;
	NONE		= 2;
	VM_QEMU		= 3;
}

message IDMapType {
	required bool	isuid			= 1;
	required bool	isgid			= 2;
	required int32	hostid			= 3;
	required int32	nsid			= 4;
	required int32	maprange		= 5;
}

message Config {
	required string		key	= 1;
	required string		value	= 2;
}

message Device {
	required string		name	= 1;
	repeated Config		config	= 2;
}

message Snapshot {
	required string			name			= 1;
	repeated Config 		localConfig		= 2;
	repeated string			profiles		= 3;
	required bool			ephemeral		= 4;
	repeated Device			localDevices	= 5;
	required int32			architecture	= 6;
	required bool			stateful		= 7;
	optional int64			creation_date	= 8;
	optional int64			last_used_date	= 9;
	optional int64 			expiry_date = 10;
}

message rsyncFeatures {
	optional bool		xattrs = 1;
	optional bool		delete = 2;
	optional bool		compress = 3;
	optional bool		bidirectional = 4;
}

message zfsFeatures {
	optional bool		compress = 1;
	optional bool		migration_header = 2;
	optional bool		header_zvols = 3;
}

message btrfsFeatures {
	optional bool		migration_header = 1;
	optional bool		header_subvolumes = 2;
	optional bool       	header_subvolume_uuids = 3;
}

message CPUInfo {
	message SGXEPCSection {
		optional uint64 base_address = 1;
		optional uint64 epc_size = 2;
	}

	message SGXSupport {
		optional bool available = 1;
		optional bool launch_control = 2;
		optional bool sgx1_supported = 3;
		optional bool sgx2_supported = 4;
		optional int64 max_enclave_size_not_64 = 5;
		optional int64 max_enclave_size_64 = 6;
		repeated SGXEPCSection epc_sections = 7;
	}

	message AMDMemEncryptionSupport {
		optional bool available = 1;
		optional uint32 c_bit_position = 2;
		optional uint32 num_vmpl = 3;
		optional uint32 phys_addr_reduction = 4;
		optional uint32 num_encrypted_guests = 5;
		optional uint32 min_sev_no_es_asid = 6;
	}

	message CacheInfo {
		optional int32 l1i = 1;
		optional int32 l1d = 2;
		optional int32 l2 = 3;
		optional int32 l3 = 4;
	}

	optional string brand_name = 1;
    optional int32 vendor_id = 2;
    optional string vendor_string = 3;
    repeated uint64 feature_set = 4;
    optional int32 physical_cores = 5;
    optional int32 threads_per_core = 6;
    optional int32 logical_cores = 7;
    optional int32 family = 8;
    optional int32 model = 9;
    optional int32 stepping = 10;
    optional int32 cache_line = 11;
    optional int64 hz = 12;
    optional int64 boost_freq = 13;
    optional CacheInfo cache = 14;
    optional SGXSupport sgx = 15;
    optional AMDMemEncryptionSupport amd_mem_encryption = 16;
    optional uint32 avx10_level = 17;
}

message MigrationAutoStatefulReq {
	required bool autoStatefulMigration = 1;
}

message MigrationAutoStatefulResp {
	required bool success = 1;
}

message MigrationHeader {
	required MigrationFSType		fs			= 1;
	optional CRIUType			criu			= 2;
	repeated IDMapType	 		idmap			= 3;
	repeated string				snapshotNames		= 4;
	repeated Snapshot			snapshots		= 5;
	optional bool				predump			= 7;
	optional rsyncFeatures			rsyncFeatures 		= 8;
	optional bool				refresh			= 9;
	optional zfsFeatures			zfsFeatures 		= 10;
	optional int64				volumeSize		= 11;
	optional btrfsFeatures			btrfsFeatures 		= 12;
	optional uint32				indexHeaderVersion	= 13;
	optional CPUInfo 			cpuInfo			= 14;
	optional bool autoStatefulMigration = 15;
}

message MigrationControl {
	required bool		success		= 1;

	/* optional failure message if sending a failure */
	optional string		message		= 2;
}

message MigrationSync {
	required bool		finalPreDump	= 1;
}
